<resources>
    <string name="app_name">Relations</string>
    <string name="item_created">Created</string>
    <string name="item_modified">Modified</string>
    <string name="entry_show_details">show entry details</string>
    <string name="title_activity_show_related">Relations</string>
    <!-- menu action titles -->
    <string name="action_search">Search</string>
    <string name="menu_title_sync_db">Synchronize Database</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="person_from">from</string>
    <string name="person_to">to</string>
    <string name="tab_terms">Terms</string>
    <string name="tab_texts">Texts</string>
    <string name="tab_persons">Persons</string>
    <string name="tab_search_result">Search Results</string>
    <string name="tab_terms_empty">No terms found (empty database).</string>
    <string name="tab_texts_empty">No texts found (empty database).</string>
    <string name="tab_persons_empty">No persons found (empty database).</string>
    <string name="tab_search_result_empty">No search results available.</string>
    <string name="fts_dialog">Creating the full text search index</string>
    <string name="fts_create_success">Successfully created the full text search index.</string>
    <string name="fts_create_process">Creating the search index.</string>
    <string name="menu_title_create_fts">Create Search Index</string>
    <string name="preference_data_synch_title">Data Synchronization</string>
    <string name="preference_cloud_title">Cloud Configuration</string>
    <string name="preference_cloud_dropbox_title">Dropbox Configuration</string>
    <string name="preference_lbl_active">Active</string>
    <string name="preference_dropbox_token_lbl">Dropbox Access Token</string>
    <string name="preference_search_index">Search Index Configuration</string>
    <string name="preference_about_title">About Relations</string>
    <string name="preference_nr_total">Total number of entries:</string>
    <string name="preference_nr_terms">Number of Terms:</string>
    <string name="preference_nr_texts">Number of Texts:</string>
    <string name="preference_nr_persons">Number of Persons:</string>
    <string name="preference_nr_relations">Number of Relations:</string>
    <string name="preference_nr_search_index">Number of Documents in Searchindex:</string>
    <string name="abstract_cloud_provider_no_incremental">No incremental data found. Please try full data synchronization.</string>
    <string name="abstract_cloud_provider_dialog_title1">Download data.</string>
    <string name="abstract_cloud_provider_dialog_title2">Import data.</string>
    <string name="abstract_cloud_provider_dft_error">An error occurred during the data synchronization.</string>
    <string name="cloud_provider_dft_success">Successfully synchronized the database.</string>
    <string name="cloud_provider_dropbox_no_config">Configuration Problem: No Dropbox access token configured!</string>
    <string name="cloud_provider_unsupported">The selected cloud provider is no longer supported. Please select Dropbox, Microsoft Azure or Relations desktop (WiFi) in the cloud configuration.</string>
    <string name="cloud_provider_azure_no_config">Configuration Problem: No MS Azure connection string is configured!</string>
    <string name="cloud_provider_azure_no_export1">No Relations export found on &lt;MS Azure>:/%s!</string>
    <string name="cloud_provider_azure_no_export2">No Relations export &lt;MS Azure>:/%s/%s found!</string>
    <string name="preference_cloud_hint">The cloud configuration to be used for data synchronization.</string>
    <string name="preference_index_title">Language</string>
    <string name="preference_index_hint">The language to be used for the Search Index.</string>
    <string name="preference_about_app_title">Application Information</string>
    <string name="preference_about_app_hint">Information about the installed Relations Application.</string>
    <string name="sync_text">synchronize</string>
    <string name="sync_switch_off">full</string>
    <string name="sync_switch_on">incremental</string>
    <!-- Preferences: Category Settings -->
    <string name="preference_settings">Settings</string>
    <!-- Preferences: Category Settings: long press title -->
    <string name="preference_settings_long_press_title">Enable long press</string>
    <!-- Preferences: Category Settings: long press description -->
    <string name="preference_settings_long_press_desc">Enable long press to display the item\'s details</string>
    <!-- Intro -->
    <string name="intro_btn_skip">Skip</string>
    <string name="intro_btn_finish">Finish</string>
    <string name="intro_btn_indicator">Indicator</string>
    <string name="intro_btn_next">Next</string>
    <!-- Intro texts -->
    <string name="intro_title_1">Import Data</string>
    <string name="intro_desc_1">This app uses the data created with the standalone application Relations RCP (https://sourceforge.net/projects/relations-rcp/).\nFirst you have to synchronize (i.e. download) the data. To do that, configure the Cloud Configuration (in Settings) and start a full synchronize (in Synchronize Database).</string>
    <string name="intro_title_2">Display Details</string>
    <string name="intro_desc_2">After data synchronization, the items are displayed in a list. To display an item’s details, swipe the item to the left.</string>
    <string name="intro_title_3">Display Related</string>
    <string name="intro_desc_3">To display the items related to the actual entry, swipe the details page to the left.</string>
    <string name="intro_title_4">Search Items</string>
    <string name="intro_desc_4">To search for an item, enter the search term in the search field.\nNote: the fulltext search index must be created in the language of your items (see Settings -> Language).</string>
    <!-- About dialog: release notes of the installed version, same text as fastlane/metadata/android/en-US/changelogs/<versionCode>.txt -->
    <string name="whats_new_title">What\'s new</string>
    <string name="whats_new_text">Relations 2.0.0\n• Requires Android 6.0 or newer.\n• Google Drive is no longer supported. If you synchronized with Google Drive, upload your Relations export to Dropbox or Microsoft Azure and select that provider in Settings → Cloud Configuration.\n• Updated for Android 16: edge-to-edge display and the predictive back gesture.\n• More reliable data synchronization.</string>
    <!-- Peer-to-peer synchronization (jvm-libp2p) -->
    <string name="p2p_provider_name">Relations desktop (WiFi)</string>
    <string name="p2p_select_title">Select your computer</string>
    <string name="p2p_searching">Searching for the Relations desktop application… Start sending the data on your computer.</string>
    <string name="p2p_connect">Connect</string>
    <string name="p2p_connection_string_hint" translatable="false">/ip4/10.0.2.2/tcp/47112/p2p/12D3KooW…</string>
    <string name="p2p_connection_string_invalid">Enter an address like /ip4/192.168.1.10/tcp/47112/p2p/&lt;peer ID&gt;.</string>
    <string name="p2p_connect_failed">Could not connect to the computer. Check that the Relations desktop application is still sending and that both devices use the same WiFi. Your data was not changed.</string>
    <string name="p2p_confirm_title">Connect to %1$s?</string>
    <string name="p2p_confirm_message">Check that your computer shows the same code:\n\n%1$s</string>
    <string name="p2p_accept">Accept</string>
    <string name="p2p_reject">Reject</string>
    <string name="p2p_receiving">Receive data.</string>
    <string name="p2p_canceled">The synchronization was canceled.</string>
    <string name="p2p_no_computer">No computer was found. Start sending the data in the Relations desktop application first, and make sure that both devices use the same WiFi.</string>
    <string name="p2p_connection_lost">The connection to the computer was lost. Your data was not changed.</string>
    <string name="p2p_timed_out">The transfer timed out. Your data was not changed.</string>
    <string name="p2p_unexpected_data">The computer sent unexpected data. Your data was not changed.</string>
    <string name="p2p_search_failed">The search for the Relations desktop could not be started. Check the WiFi connection.</string>
    <string name="p2p_no_wifi">Connect this phone to the same WiFi as your computer to synchronize with the Relations desktop.</string>
</resources>
