<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- "@string/key_preference_cloud" -->
    <android.support.v7.preference.PreferenceCategory
        android:key="@string/key_preference_cloud"
        android:title="@string/preference_data_synch_title"
        android:persistent="false">

        <org.elbe.relations.mobile.preferences.CloudConfigPreference
            android:key="@string/key_preference_cloud_config"
            android:title="@string/preference_cloud_title"
            android:summary="@string/preference_cloud_hint"
            android:defaultValue="dropbox" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="preference_index"
        android:title="@string/preference_search_index"
        android:persistent="false" >

        <org.elbe.relations.mobile.preferences.SearchIndexPreference
            android:key="@string/key_preference_index_language"
            android:title="@string/preference_index_title"
            android:summary="@string/preference_index_hint" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="preference_settings_category"
        android:title="@string/preference_settings"
        android:persistent="false" >

        <CheckBoxPreference
            android:key="preference_settings_long_press"
            android:title="@string/preference_settings_long_press_title"
            android:summary="@string/preference_settings_long_press_desc"
            android:defaultValue="true" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="preference_about"
        android:title="@string/preference_about_title"
        android:persistent="false" >

        <org.elbe.relations.mobile.preferences.AppInfo
            android:key="preference_about_view"
            android:title="@string/preference_about_app_title"
            android:summary="@string/preference_about_app_hint"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>