<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/relationsVersionLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Relations Mobile:"
                android:textSize="17sp"
                android:paddingTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="7dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/relationsVersionVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDbTotalLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_total"
                android:textSize="17sp"
                android:paddingTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="7dp" />

            <TextView
                android:id="@+id/countDbTotalVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDbTermsLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_terms"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="7dp"/>

            <TextView
                android:id="@+id/countDbTermsVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDbTextsLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_texts"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="7dp" />

            <TextView
                android:id="@+id/ccountDbTextsVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDbPersonsLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_persons"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="7dp" />

            <TextView
                android:id="@+id/countDbPersonsVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDbRelationsLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_relations"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="7dp" />

            <TextView
                android:id="@+id/countDbRelationsVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countSearchIndexLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/preference_nr_search_index"
                android:textSize="17sp"
                android:paddingTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="7dp" />

            <TextView
                android:id="@+id/countSearchIndexVal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="17sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/whatsNewLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats_new_title"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="7dp" />

        <TextView
            android:id="@+id/whatsNewVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats_new_text"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="7dp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</ScrollView>